Update HMM tagger project readme and warmup notebook

--- a/Projects/4_HMM Tagger/HMM warmup (optional).ipynb
+++ b/Projects/4_HMM Tagger/HMM warmup (optional).ipynb
@@ -23,21 +23,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "**Note:** Make sure you have selected a **Python 3** kernel in Workspaces or the hmm-tagger conda environment if you are running the Jupyter server on your own machine.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Jupyter \"magic methods\" -- only need to be run once per kernel restart\n",
     "%load_ext autoreload\n",
-    "%aimport helpers, tests\n",
+    "%aimport helpers\n",
     "%autoreload 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import python modules -- this cell needs to be run again if you make changes to any of the files\n",
@@ -85,7 +98,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# create the HMM model\n",
@@ -452,9 +467,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:nlphmm]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-nlphmm-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -466,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
