Add missing HTML import to HMM tagger project

--- a/Projects/4_HMM Tagger/HMM Tagger.ipynb
+++ b/Projects/4_HMM Tagger/HMM Tagger.ipynb
@@ -74,6 +74,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "from IPython.core.display import HTML\n",
     "from itertools import chain\n",
     "from collections import Counter, defaultdict\n",
     "from helpers import show_model, Dataset\n",
