Implement the most common Class tagger

--- a/Projects/4_HMM Tagger/HMM Tagger.ipynb
+++ b/Projects/4_HMM Tagger/HMM Tagger.ipynb
@@ -50,11 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Jupyter \"magic methods\" -- only need to be run once per kernel restart\n",
     "%load_ext autoreload\n",
@@ -64,10 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import python modules -- this cell needs to be run again if you make changes to any of the files\n",
@@ -108,11 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 57340 sentences in the corpus.\n",
+      "There are 45872 sentences in the training set.\n",
+      "There are 11468 sentences in the testing set.\n"
+     ]
+    }
+   ],
    "source": [
     "data = Dataset(\"tags-universal.txt\", \"brown-universal.txt\", train_test_split=0.8)\n",
     "\n",
@@ -180,11 +193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence: b100-38532\n",
+      "words:\n",
+      "\t('Perhaps', 'it', 'was', 'right', ';', ';')\n",
+      "tags:\n",
+      "\t('ADV', 'PRON', 'VERB', 'ADJ', '.', '.')\n"
+     ]
+    }
+   ],
    "source": [
     "key = 'b100-38532'\n",
     "print(\"Sentence: {}\".format(key))\n",
@@ -207,11 +230,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are a total of 1161192 samples of 56057 unique words in the corpus.\n",
+      "There are 928458 samples of 50536 unique words in the training set.\n",
+      "There are 232734 samples of 25112 unique words in the testing set.\n",
+      "There are 5521 words in the test set that are missing in the training set.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"There are a total of {} samples of {} unique words in the corpus.\"\n",
     "      .format(data.N, len(data.vocab)))\n",
@@ -236,11 +268,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence 1: ('Mr.', 'Podger', 'had', 'thanked', 'him', 'gravely', ',', 'and', 'now', 'he', 'made', 'use', 'of', 'the', 'advice', '.')\n",
+      "\n",
+      "Labels 1: ('NOUN', 'NOUN', 'VERB', 'VERB', 'PRON', 'ADV', '.', 'CONJ', 'ADV', 'PRON', 'VERB', 'NOUN', 'ADP', 'DET', 'NOUN', '.')\n",
+      "\n",
+      "Sentence 2: ('But', 'there', 'seemed', 'to', 'be', 'some', 'difference', 'of', 'opinion', 'as', 'to', 'how', 'far', 'the', 'board', 'should', 'go', ',', 'and', 'whose', 'advice', 'it', 'should', 'follow', '.')\n",
+      "\n",
+      "Labels 2: ('CONJ', 'PRT', 'VERB', 'PRT', 'VERB', 'DET', 'NOUN', 'ADP', 'NOUN', 'ADP', 'ADP', 'ADV', 'ADV', 'DET', 'NOUN', 'VERB', 'VERB', '.', 'CONJ', 'DET', 'NOUN', 'PRON', 'VERB', 'VERB', '.')\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# accessing words with Dataset.X and tags with Dataset.Y \n",
     "for i in range(2):    \n",
@@ -260,11 +305,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Stream (word, tag) pairs:\n",
+      "\n",
+      "\t ('Mr.', 'NOUN')\n",
+      "\t ('Podger', 'NOUN')\n",
+      "\t ('had', 'VERB')\n",
+      "\t ('thanked', 'VERB')\n",
+      "\t ('him', 'PRON')\n",
+      "\t ('gravely', 'ADV')\n",
+      "\t (',', '.')\n"
+     ]
+    }
+   ],
    "source": [
     "# use Dataset.stream() (word, tag) samples for the entire corpus\n",
     "print(\"\\nStream (word, tag) pairs:\\n\")\n",
@@ -302,11 +362,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your emission counts look good!</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def pair_counts(sequences_A, sequences_B):\n",
     "    \"\"\"Return a dictionary keyed to each unique value in the first sequence list\n",
@@ -317,12 +389,15 @@
     "    words, then if 1244 sequences contain the word \"time\" tagged as a NOUN, then\n",
     "    you should return a dictionary such that pair_counts[NOUN][time] == 1244\n",
     "    \"\"\"\n",
-    "    # TODO: Finish this function!\n",
-    "    raise NotImplementedError\n",
-    "\n",
+    "    tagset = set(k for i in sequences_A for k in i)\n",
+    "    res_dct = {i:{} for i in tagset}\n",
+    "    cntr = Counter(zip(chain(*sequences_A), chain(*sequences_B)))\n",
+    "    for tag, word in cntr:\n",
+    "        res_dct[tag][word] = cntr[(tag, word)]    \n",
+    "    return res_dct\n",
     "\n",
     "# Calculate C(t_i, w_i)\n",
-    "emission_counts = pair_counts(# TODO: YOUR CODE HERE)\n",
+    "emission_counts = pair_counts(data.testing_set.Y, data.testing_set.X)\n",
     "\n",
     "assert len(emission_counts) == 12, \\\n",
     "       \"Uh oh. There should be 12 tags in your dictionary.\"\n",
@@ -855,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
