Implement the most frequent Class tagger. Implement Unigram and Bigram counts

--- a/Projects/4_HMM Tagger/HMM Tagger.ipynb
+++ b/Projects/4_HMM Tagger/HMM Tagger.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,11 +419,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your MFC tagger has all the correct words!</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a lookup table mfc_table where mfc_table[word] contains the tag label most frequently assigned to that word\n",
     "from collections import namedtuple\n",
@@ -446,9 +458,12 @@
     "# TODO: calculate the frequency of each tag being assigned to each word (hint: similar, but not\n",
     "# the same as the emission probabilities) and use it to fill the mfc_table\n",
     "\n",
-    "word_counts = pair_counts(# TODO: YOUR CODE HERE)\n",
-    "\n",
-    "mfc_table = # TODO: YOUR CODE HERE\n",
+    "word_counts = pair_counts(data.training_set.Y, data.training_set.X)\n",
+    "mfc_table = {}\n",
+    "lst = [(word, tag, word_count) for tag, word_dct in word_counts.items() for word, word_count in word_dct.items()]\n",
+    "    \n",
+    "for x, y, z in sorted(lst, key=lambda x: [x[0], x[2]]):\n",
+    "    mfc_table[x] = y\n",
     "\n",
     "# DO NOT MODIFY BELOW THIS LINE\n",
     "mfc_model = MFCTagger(mfc_table) # Create a Most Frequent Class tagger instance\n",
@@ -469,10 +484,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def replace_unknown(sequence):\n",
@@ -497,11 +510,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence Key: b100-28144\n",
+      "\n",
+      "Predicted labels:\n",
+      "-----------------\n",
+      "['CONJ', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'CONJ', 'NOUN', 'NUM', '.', '.', 'NOUN', '.', '.']\n",
+      "\n",
+      "Actual labels:\n",
+      "--------------\n",
+      "('CONJ', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'CONJ', 'NOUN', 'NUM', '.', '.', 'NOUN', '.', '.')\n",
+      "\n",
+      "\n",
+      "Sentence Key: b100-23146\n",
+      "\n",
+      "Predicted labels:\n",
+      "-----------------\n",
+      "['PRON', 'VERB', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', 'NOUN', 'VERB', 'VERB', '.', 'ADP', 'VERB', 'DET', 'NOUN', 'ADP', 'NOUN', 'ADP', 'DET', 'NOUN', '.']\n",
+      "\n",
+      "Actual labels:\n",
+      "--------------\n",
+      "('PRON', 'VERB', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', 'NOUN', 'VERB', 'VERB', '.', 'ADP', 'VERB', 'DET', 'NOUN', 'ADP', 'NOUN', 'ADP', 'DET', 'NOUN', '.')\n",
+      "\n",
+      "\n",
+      "Sentence Key: b100-35462\n",
+      "\n",
+      "Predicted labels:\n",
+      "-----------------\n",
+      "['DET', 'ADJ', 'NOUN', 'VERB', 'VERB', 'VERB', 'ADP', 'DET', 'ADJ', 'ADJ', 'NOUN', 'ADP', 'DET', 'ADJ', 'NOUN', '.', 'ADP', 'ADJ', 'NOUN', '.', 'CONJ', 'ADP', 'DET', '<MISSING>', 'ADP', 'ADJ', 'ADJ', '.', 'ADJ', '.', 'CONJ', 'ADJ', 'NOUN', 'ADP', 'ADV', 'NOUN', '.']\n",
+      "\n",
+      "Actual labels:\n",
+      "--------------\n",
+      "('DET', 'ADJ', 'NOUN', 'VERB', 'VERB', 'VERB', 'ADP', 'DET', 'ADJ', 'ADJ', 'NOUN', 'ADP', 'DET', 'ADJ', 'NOUN', '.', 'ADP', 'ADJ', 'NOUN', '.', 'CONJ', 'ADP', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', '.', 'ADJ', '.', 'CONJ', 'ADJ', 'NOUN', 'ADP', 'ADJ', 'NOUN', '.')\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for key in data.testing_set.keys[:3]:\n",
     "    print(\"Sentence Key: {}\\n\".format(key))\n",
@@ -524,10 +575,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def accuracy(X, Y, model):\n",
@@ -567,11 +616,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training accuracy mfc_model: 95.72%\n",
+      "testing accuracy mfc_model: 93.02%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your MFC tagger accuracy looks correct!</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mfc_training_acc = accuracy(data.training_set.X, data.training_set.Y, mfc_model)\n",
     "print(\"training accuracy mfc_model: {:.2f}%\".format(100 * mfc_training_acc))\n",
@@ -614,11 +683,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your tag unigrams look good!</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def unigram_counts(sequences):\n",
     "    \"\"\"Return a dictionary keyed to each unique value in the input sequence list that\n",
@@ -628,11 +709,10 @@
     "    For example, if the tag NOUN appears 275558 times over all the input sequences,\n",
     "    then you should return a dictionary such that your_unigram_counts[NOUN] == 275558.\n",
     "    \"\"\"\n",
-    "    # TODO: Finish this function!\n",
-    "    raise NotImplementedError\n",
+    "    lst = [y for x, y in sequences]\n",
+    "    return Counter(lst)\n",
     "\n",
-    "# TODO: call unigram_counts with a list of tag sequences from the training set\n",
-    "tag_unigrams = unigram_counts(# TODO: YOUR CODE HERE)\n",
+    "tag_unigrams = unigram_counts(data.training_set.stream())\n",
     "\n",
     "assert set(tag_unigrams.keys()) == data.training_set.tagset, \\\n",
     "       \"Uh oh. It looks like your tag counts doesn't include all the tags!\"\n",
@@ -654,11 +734,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your tag bigrams look good!</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def bigram_counts(sequences):\n",
     "    \"\"\"Return a dictionary keyed to each unique PAIR of values in the input sequences\n",
@@ -668,12 +760,13 @@
     "    For example, if the pair of tags (NOUN, VERB) appear 61582 times, then you should\n",
     "    return a dictionary such that your_bigram_counts[(NOUN, VERB)] == 61582\n",
     "    \"\"\"\n",
+    "    lst = [y for x, y in sequences]\n",
+    "    pairlst = list(zip(lst[:-1], lst[1:]))\n",
+    "    \n",
+    "    return Counter(pairlst)\n",
     "\n",
-    "    # TODO: Finish this function!\n",
-    "    raise NotImplementedError\n",
-    "\n",
-    "# TODO: call bigram_counts with a list of tag sequences from the training set\n",
-    "tag_bigrams = bigram_counts(# TODO: YOUR CODE HERE)\n",
+    " \n",
+    "tag_bigrams = bigram_counts(data.training_set.stream())\n",
     "\n",
     "assert len(tag_bigrams) == 144, \\\n",
     "       \"Uh oh. There should be 144 pairs of bigrams (12 tags x 12 tags)\"\n",
