Implement sequence starting count and sequence ending count

--- a/Projects/4_HMM Tagger/HMM Tagger.ipynb
+++ b/Projects/4_HMM Tagger/HMM Tagger.ipynb
@@ -52,16 +52,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Jupyter \"magic methods\" -- only need to be run once per kernel restart\n",
     "%load_ext autoreload\n",
@@ -362,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +365,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +422,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +615,7 @@
      "output_type": "stream",
      "text": [
       "training accuracy mfc_model: 95.72%\n",
-      "testing accuracy mfc_model: 93.02%\n"
+      "testing accuracy mfc_model: 93.01%\n"
      ]
     },
     {
@@ -636,7 +627,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +686,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +737,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,11 +778,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your starting tag counts look good!</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def starting_counts(sequences):\n",
     "    \"\"\"Return a dictionary keyed to each unique value in the input sequences list\n",
@@ -801,11 +804,11 @@
     "    For example, if 8093 sequences start with NOUN, then you should return a\n",
     "    dictionary such that your_starting_counts[NOUN] == 8093\n",
     "    \"\"\"\n",
-    "    # TODO: Finish this function!\n",
-    "    raise NotImplementedError\n",
+    "    seq_start = [k[0] for k in sequences]\n",
+    "    return Counter(seq_start)\n",
     "\n",
     "# TODO: Calculate the count of each tag starting a sequence\n",
-    "tag_starts = starting_counts(# TODO: YOUR CODE HERE)\n",
+    "tag_starts = starting_counts(data.training_set.Y)\n",
     "\n",
     "assert len(tag_starts) == 12, \"Uh oh. There should be 12 tags in your dictionary.\"\n",
     "assert min(tag_starts, key=tag_starts.get) == 'X', \"Hmmm...'X' is expected to be the least common starting bigram.\"\n",
@@ -823,11 +826,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your ending tag counts look good!</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def ending_counts(sequences):\n",
     "    \"\"\"Return a dictionary keyed to each unique value in the input sequences list\n",
@@ -837,11 +852,11 @@
     "    For example, if 18 sequences end with DET, then you should return a\n",
     "    dictionary such that your_starting_counts[DET] == 18\n",
     "    \"\"\"\n",
-    "    # TODO: Finish this function!\n",
-    "    raise NotImplementedError\n",
+    "    end_start = [k[-1] for k in sequences]\n",
+    "    return Counter(end_start)\n",
     "\n",
     "# TODO: Calculate the count of each tag ending a sequence\n",
-    "tag_ends = ending_counts(# TODO: YOUR CODE HERE)\n",
+    "tag_ends = ending_counts(data.training_set.Y)\n",
     "\n",
     "assert len(tag_ends) == 12, \"Uh oh. There should be 12 tags in your dictionary.\"\n",
     "assert min(tag_ends, key=tag_ends.get) in ['X', 'CONJ'], \"Hmmm...'X' or 'CONJ' should be the least common ending bigram.\"\n",
@@ -868,21 +883,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'is_silent'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-aa34f8bb9a10>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;31m# NOTE: YOU SHOULD NOT NEED TO MODIFY ANYTHING BELOW THIS LINE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;31m# finalize the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m \u001b[0mbasic_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtag\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbasic_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtag\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtraining_set\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtagset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m        \u001b[0;34m\"Every state in your network should use the name of the associated tag, which must be one of the training set tags.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpomegranate/hmm.pyx\u001b[0m in \u001b[0;36mpomegranate.hmm.HiddenMarkovModel.bake\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'is_silent'"
+     ]
+    }
+   ],
    "source": [
     "basic_model = HiddenMarkovModel(name=\"base-hmm-tagger\")\n",
     "\n",
     "# TODO: create states with emission probability distributions P(word | tag) and add to the model\n",
     "# (Hint: you may need to loop & create/add new states)\n",
-    "basic_model.add_states()\n",
+    "states = []\n",
+    "for tag, word_dict in emission_counts.items():\n",
+    "    dist_tag = DiscreteDistribution({word: cn/tag_unigrams[tag] for word, cn in word_dict.items()})\n",
+    "    states.append(State(dist_tag, name=tag))\n",
+    "\n",
+    "basic_model.add_states(states)\n",
+    "state_names = [s.name for s in states]\n",
+    "state_index = {tag:num for num, tag in enumerate(state_names)}\n",
+    "\n",
+    "# Start transition\n",
+    "total_start = sum(tag_starts.values())\n",
+    "for tag, cn in tag_starts.items():\n",
+    "    sname = state_index[tag]\n",
+    "    basic_model.add_transition(basic_model.start, states[state_index[tag]], cn/total_start)\n",
+    "\n",
+    "# End transition\n",
+    "total_end = sum(tag_ends.values())\n",
+    "for tag, cn in tag_ends.items():\n",
+    "    basic_model.add_transition(states[state_index[tag]], basic_model.end, cn/total_end)\n",
+    "\n",
     "\n",
     "# TODO: add edges between states for the observed transition frequencies P(tag_i | tag_i-1)\n",
     "# (Hint: you may need to loop & add transitions\n",
-    "basic_model.add_transition()\n",
+    "for key, value in tag_bigrams.items():\n",
+    "    basic_model.add_transition(key[1], key[0], value/tag_unigrams[key[0]])\n",
     "\n",
     "\n",
     "# NOTE: YOU SHOULD NOT NEED TO MODIFY ANYTHING BELOW THIS LINE\n",
@@ -901,7 +947,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -927,9 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for key in data.testing_set.keys[:3]:\n",
@@ -958,9 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!!jupyter nbconvert *.ipynb"
@@ -992,9 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
